[tool.poetry]
name = "wordle_jy3482"
version = "0.1.0"
description = "Wordle function for homework 7"
authors = ["Jingyi Yan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "sphinx (>=8.2.3,<9.0.0)",
    "myst-parser (>=4.0.1,<5.0.0)",
    "sphinx-autodoc-typehints (>=3.5.2,<4.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
    "myst-nb (>=1.3.0,<2.0.0)",
    "sphinx-autoapi (>=3.6.1,<4.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
