[tool.poetry]
name = "wordle_yan_jingyi"
version = "0.1.0"
description = "Wordle function for homework07"
authors = ["Jingyi Yan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
