[tool.poetry]
name = "wordle_jy3482"
version = "0.1.0"
description = "Wordle function of homework 07"
authors = ["Jingyi Yan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
